--- a/GUI/GUI/GUI.csproj
+++ b/GUI/GUI/GUI.csproj
@@ -114,6 +114,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="MVVM\View\HistogramView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MVVM\View\HomeView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -125,10 +129,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MVVM\ViewModel\ConvertViewModel.cs" />
+    <Compile Include="MVVM\ViewModel\HistogramViewModel.cs" />
     <Compile Include="MVVM\ViewModel\HomeViewModel.cs" />
     <Compile Include="MVVM\ViewModel\MainViewModel.cs" />
     <Compile Include="MVVM\View\ConvertView.xaml.cs">
       <DependentUpon>ConvertView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MVVM\View\HistogramView.xaml.cs">
+      <DependentUpon>HistogramView.xaml</DependentUpon>
     </Compile>
     <Compile Include="MVVM\View\HomeView.xaml.cs">
       <DependentUpon>HomeView.xaml</DependentUpon>
@@ -183,7 +191,11 @@
     <Resource Include="Images\imagen.png" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Images\spreadsheet-app.png" />
+    <Resource Include="Histogram_Images\histogram.png" />
+    <Resource Include="Histogram_Images\hBG.png" />
     <Content Include="scripts\Average.py" />
+    <Content Include="scripts\Histogram.py" />
     <Content Include="scripts\Luminosity.py" />
     <Content Include="scripts\Midgray.py" />
   </ItemGroup>
